Fix chrome crashing in mash_session.

The chrome browser process would crash upon starting in mash_session.
This resulted from the MojoShellConnection being initialized after it
was used for the first time. Move the initialization of
MojoShellConnection to immediately before it's first used to fix crash.

BUG=604443

Review URL: https://codereview.chromium.org/1894273002

Cr-Commit-Position: refs/heads/master@{#388243}

Former-commit-id: 2117bf3be12fc1a4ef2be40d3d6c28804917759a